css/main.css
* {
    font-family: 'Roboto', sans-serif;
}
p {
    font-size: 16pt;
    text-align: center;
}
h1 {
    font-size: 30pt;
}

h2 {
    margin-top: 5px;
    font-size: 25pt;
}
h3 {
    font-size: 20pt;
}

.fa-brands {
    margin: 10px;
    padding: 0;
    text-decoration: none;
    border-radius: 20%;
    color: white;
    width: auto;
}

footer {
    background-color: black;
    display: block;
    text-align: center;
    align-items: center;
    justify-content: center;
    padding: 10px;
    margin-top: 20px;
    width: 100vw;
    border-top: 2px groove white;
}

body {
    margin: 0;
    background-image: url(".../images/bg.jpg");
    background-size: cover;
    background-color: black;
    color: white;
    align-items: center;
}

i:hover {
    transform: scale(1.25);
    
}
i:active {
    opacity: 0.7;
}
section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.round-pic {
    border-radius: 50%;
    border: 2px groove white;
    height: 200px;
    width: auto;
    margin: 10px;
}
.about {
    padding: 20px;
}

.projects {
    background-color: white;
    justify-content: center;
    align-items: center;
    color: black;
    width: 70%;
    text-align: center;
    margin: auto;
    /*display: flex;
    flex-direction: column;*/
    padding: 20px;
    border: 5px groove black;
}

#project-grid-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project-div {
    width: auto;
    height: auto;
    margin: 0px;
    padding: 2%;
    align-items: center;
    text-align: center;
    border-top: 2px groove black;
}

.project-div img {
    height: auto;
    width: 70em;
    border: 3px groove black;
    border-radius: 2%;
}

a {
    text-decoration: none;
}
.project-link:hover {
    opacity: 0.7;
}

